--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -6,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ระบบเช็คคะแนน</title>
+    <title>ระบบเช็คคะแนน167</title>
 </head>
 <body>
     <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbzw8kZmmrP4TBB91XOxRp-1S3Lt6Vl0CP1vJbc0bNYpsJqPWV3ISD-Qtc4fUTMnhSP5/exec" frameborder="0"></iframe>
